discussion/kv_engine/133499/133499_rev36_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-36370: Add DCP cluster_test perf suite

Introduces the following new test:
 - DcpPerfTest.Drain
 - DcpPerfTest.DataCopy
 - DcpPerfSinkTest.Fill

Example output for a drain run:

source/build/kv_engine$ ./cluster_test --gtest_filter="*DcpPerf*" --gtest_catch_exceptions=0
Note: Google Test filter = *DcpPerf*
[==========] Running 12 tests from 2 test suites.
[----------] Global test environment set-up.
[----------] 8 tests from Perf/DcpPerfTest
[ RUN      ] Perf/DcpPerfTest.Drain/4_250000_flowctl
Loading data.. done - 1000000 items in 27508 ms

Test completed
Time: 5954 ms
Bucket quota: 10240000000
Num items: 1000000
Bytes received: 1089555992
Throughput: 174.518 MB/s
[       OK ] Perf/DcpPerfTest.Drain/4_250000_flowctl (35076 ms)

Change-Id: Ib8fc6a37984ad3f9f4d8173999e300773ecc4f39

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2020-09-07 12:46:01.000000000
Message: 
Uploaded patch set 36: Patch Set 35 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-07 13:50:36.000000000
Message: 
Patch Set 36: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30082/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ServerQuotaReached/persistentMagma_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ServerQuotaReached/persistentMagma_value_only
..\kv_engine\engines\ep\tests\module_tests\item_pager_test.cc(352): error: Expected: (stats.getPreciseTotalMemoryUsed() - val) < (stats.mem_low_wat.load()), actual: 1304545 vs 1292373
Expected to be below low watermark after running item pager
[  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ServerQuotaReached/persistentMagma_value_only, where GetParam() = ("persistentMagma", "value_only") (181 ms)
EphemeralOrPersistent/STItemPagerTest.ServerQuotaReached/persistentMagma_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30082/ )

Timeout of a CTest test 396/396 Test #393: cluster_test ..................................................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30082/ )

Failure of a CTest test 245/396 Test #208: ep-engine_ep_unit_tests.EphemeralOrPersistent/STItemPagerTest ................................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30082/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4238/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/tests/testapp_cluster/dcp_tests.cc b/tests/testapp_cluster/dcp_tests.cc
index e87b023..23d0161 100644
--- a/tests/testapp_cluster/dcp_tests.cc
+++ b/tests/testapp_cluster/dcp_tests.cc
@@ -242,9 +242,8 @@ TEST_P(DcpPerfTest, Drain) {
              {&quot;send_stream_end_on_client_close_stream&quot;, &quot;true&quot;},
              {&quot;enable_expiry_opcode&quot;, &quot;true&quot;}}};
     if (flowControlEnabled) {
-        controls.push_back(
-                std::make_pair(&quot;connection_buffer_size&quot;,
-                               std::to_string(connectionBufferSize)));
+        controls.emplace_back(&quot;connection_buffer_size&quot;,
+                               std::to_string(connectionBufferSize));
     }
     for (const auto&amp; p : controls) {
         if (!connActive
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4238/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp_cluster/dcp_tests.cc:245:18: warning: use emplace_back instead of push_back [modernize-use-emplace]
        controls.push_back(
                 ^~~~~~~~~~
                 emplace_back
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp_cluster/dcp_tests.cc:245:18: note: FIX-IT applied suggested code changes
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp_cluster/dcp_tests.cc:247:68: note: FIX-IT applied suggested code changes
                               std::to_string(connectionBufferSize)));
                                                                   ^
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/tests/testapp_cluster/dcp_tests.cc b/tests/testapp_cluster/dcp_tests.cc
index e87b023..23d0161 100644
--- a/tests/testapp_cluster/dcp_tests.cc
+++ b/tests/testapp_cluster/dcp_tests.cc
@@ -242,9 +242,8 @@ TEST_P(DcpPerfTest, Drain) {
              {&quot;send_stream_end_on_client_close_stream&quot;, &quot;true&quot;},
              {&quot;enable_expiry_opcode&quot;, &quot;true&quot;}}};
     if (flowControlEnabled) {
-        controls.push_back(
-                std::make_pair(&quot;connection_buffer_size&quot;,
-                               std::to_string(connectionBufferSize)));
+        controls.emplace_back(&quot;connection_buffer_size&quot;,
+                               std::to_string(connectionBufferSize));
     }
     for (const auto&amp; p : controls) {
         if (!connActive
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4238/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4585/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ServerQuotaReached/persistentMagma_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ServerQuotaReached/persistentMagma_value_only
[2020-09-07T13:10:56.044Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:352: Failure
[2020-09-07T13:10:56.044Z] Expected: (stats.getPreciseTotalMemoryUsed() - val) < (stats.mem_low_wat.load()), actual: 1229940 vs 1221035
[2020-09-07T13:10:56.044Z] Expected to be below low watermark after running item pager
[2020-09-07T13:10:56.044Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ServerQuotaReached/persistentMagma_value_only, where GetParam() = ("persistentMagma", "value_only") (53 ms)
EphemeralOrPersistent/STItemPagerTest.ServerQuotaReached/persistentMagma_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4585/ )

Failure of a CTest test [2020-09-07T13:10:56.044Z]  44/410 Test #209: ep-engine_ep_unit_tests.EphemeralOrPersistent/STItemPagerTest ............................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4585/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5476/ : FAILURE

Failure of a CTest test [2020-09-07T13:40:34.232Z] 400/400 Test #397: cluster_test ................................................................................................ ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5476/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5689/ : FAILURE

ThreadSanitizer issue: data race ../kv_engine/daemon/cookie.h:427 in Cookie::setEngineStorage(void*)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5689/ )

Failure of a CTest test [2020-09-07T13:21:30.124Z] 391/391 Test #388: cluster_test ................................................................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5689/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5565/ : FAILURE

Failure of a CTest test [2020-09-07T13:18:09.357Z] 413/413 Test #410: cluster_test ................................................................................................ ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5565/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13387/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26063/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2765/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
